Started hero refactor

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,12 +1,9 @@
 {% include head.html %}
   <body>
-    <div id="fb-root"></div>
-    <script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_GB/sdk.js#xfbml=1&version=v8.0" nonce="64wUnRhz"></script>
-    <main class="content">
+    <div class="content-wrap">
       <header class="header">
         <h1 class="title"><a href="/"><img class="title--logo" src="{{ p.url | prepend: site.baseurl }}/assets/images/logo-tenoclockbooks.png" alt="Ten O'Clock Books" /></a></h1>
         <section class="follow">
-          <!-- <h2 class="follow--header">Follow us</h2> -->
           <ul class="follow--links">
             <li>
               <a href="https://www.instagram.com/tenoclockbooks">
@@ -19,16 +16,13 @@
           </ul>
         </section>
       </header>
+      <!-- <section class="hero">
+        Hero area
+      </section> -->
 
-<!--
-      <div class="alert">
-        <h1>Coronavirus update</h1>
-        <p>As you are aware, the Coronavirus has affected nearly every part of our lives.
-          Our first publication, <em>Fisherwomen</em> by Craig Easton is imminent, but the production
-          has been delayed to ensure anyone working on the project is not put at risk.</p>
-        <p>Of course, being a start-up book publisher, we would be grateful for any further
-          pre-orders at this time. Stay safe.</p>
-      </div> -->
+    <div id="fb-root"></div>
+    <script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_GB/sdk.js#xfbml=1&version=v8.0" nonce="64wUnRhz"></script>
+    <main class="content">
 
       <p class="statement">
         {{ page.title }}
@@ -60,6 +54,7 @@
 
       </section>
     </main>
+    </div>
 
 <!--End mc_embed_signup-->
   {% include footer.html %}
