--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -7,7 +7,7 @@ html {
 
 body {
   // min-width: 320px;
-  // margin: 0; <--- Cancelled to allow sticky footer to work
+  margin: 0; 
   padding: 0;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
