--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -30,15 +30,25 @@ h1, h2, h3, h4, h5, h6, strong, b {
 // -- temp styles -- //
 body {
   text-align: left;
-  padding: 0 10%;
   @include mq(small) {
-    padding: 0 5%;
   }
 
 }
 .header {
-  padding: 50px 0;
-  min-height: 50px;
+  background: transparent url(/assets/images/fisherwomen_hero3.jpg) 0 0 no-repeat;
+  min-height: 500px;
+  background-size: cover;
+  background-position: 0 0;
+  padding: 50px 10%;
+}
+.hero {
+  min-height: 500px;
+  @include show(red);
+
+}
+.header {
+  // padding: 50px 0;
+  // min-height: 50px;
 }
 .title {
   border: none;
