--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -30,25 +30,19 @@ h1, h2, h3, h4, h5, h6, strong, b {
 // -- temp styles -- //
 body {
   text-align: left;
+  background-image: url(/assets/images/fisherwomen_hero3_dark.jpg), linear-gradient(180deg, #080708, #171518);
+  background-size: 100%;
+  background-position: 0 100px, 0 0;
+  background-attachment: fixed;
+  background-repeat: no-repeat;
   @include mq(small) {
   }
 
 }
-.header {
-  background: transparent url(/assets/images/fisherwomen_hero3.jpg) 0 0 no-repeat;
-  min-height: 500px;
-  background-size: cover;
-  background-position: 0 0;
-  padding: 50px 10%;
-}
-.hero {
-  min-height: 500px;
-  @include show(red);
 
-}
 .header {
-  // padding: 50px 0;
-  // min-height: 50px;
+  padding: 40px 10%;
+  min-height: 50px;
 }
 .title {
   border: none;
