--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -24,5 +24,5 @@
 </form>
 </div>
 
-<p class="footer--copyright"><a href="#"><img class="logomark" src="{{ p.url | prepend: site.baseurl }}/assets/images/logomark.png" alt="Ten O'Clock Books" /></a>2020 &copy; Ten O'Clock Books. Email <a href="hello@tenoclockbooks.com">hello@tenoclockbooks.com</a>.</p>
+<p class="footer--copyright"><a href="#"><img class="logomark" src="{{ p.url | prepend: site.baseurl }}/assets/images/logomark.png" alt="Ten O'Clock Books" /></a>{{ site.time | date: '%Y' }} &copy; Ten O'Clock Books. Email <a href="hello@tenoclockbooks.com">hello@tenoclockbooks.com</a>.</p>
 </footer>
