Tidied up home styles vs product page styles

--- a/_layouts/product.html
+++ b/_layouts/product.html
@@ -1,5 +1,5 @@
 {% include head.html %}
-  <body>
+  <body style="background-image: url(/assets/images/{{ page.bgimg }}.jpg), linear-gradient(180deg, #080708, #171518)">
     <main class="content">
       <header class="header">
         <h1 class="title"><a href="/"><img class="title--logo" src="{{ p.url | prepend: site.baseurl }}/assets/images/logo-tenoclockbooks.png" alt="Ten O'Clock Books" /></a></h1>
