--- a/_sass/_purchase.scss
+++ b/_sass/_purchase.scss
@@ -1,13 +1,15 @@
 .purchase--wrap {
   // margin: 0 auto;
+  display: flex;
   @include cf();
 }
 .purchase-link {
   float: left;
-  width: 46%;
+  // width: 46%;
   background-color: $red;
   margin: 0 2%;
   box-sizing: border-box;
+  border-radius: 2px;
   @include transition();
   &:hover {
     transform: scale(1.05);
