--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,12 +1,12 @@
 {% include head.html %}
-  <body>
+  <body style="background-image: url(/assets/images/{{ page.bgimg }}.jpg), linear-gradient(180deg, #080708, #171518)">
     <main class="content">
 
     {% include header.html %}
     <div id="fb-root"></div>
     <script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_GB/sdk.js#xfbml=1&version=v8.0" nonce="64wUnRhz"></script>
 
-      <section class="content-intro">
+      <section class="cta-strip">
         <!-- <p class="statement">
           {{ page.title }}
         </p> -->
