--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,9 +7,9 @@
     <script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_GB/sdk.js#xfbml=1&version=v8.0" nonce="64wUnRhz"></script>
 
       <section class="cta-strip">
-        <!-- <p class="statement">
-          {{ page.title }}
-        </p> -->
+        <p class="cta-strip--sticker">
+          <strong>{{ page.title }}</strong>
+        </p>
         {{ content }}
 
         {% if page.shipping == false and page.tags contains "home" %}
