--- a/_sass/_content.scss
+++ b/_sass/_content.scss
@@ -58,6 +58,7 @@ a {
     padding-right: .5em;
   }
   .cta-strip--sticker {
+    font-size: 14px;
     position: absolute;
     min-width: 0 !important;
     width: 150px;
