--- a/_sass/_product.scss
+++ b/_sass/_product.scss
@@ -10,11 +10,25 @@
 }
 .content-intro--content {
   @include cf();
+  .content-intro--images img {
+    max-height: 500px;
+    display: block;
+    margin: 0px auto 50px;
+  }
+  > p, > h3 {
+    max-width: 40em;
+    margin: .5em auto .5em;
+  }
+  h2 {
+    margin: 2em auto 2em;
+    text-align: center;
+  }
 }
+
 .statement {
   clear: both;
   text-align: center;
-  font-size: 1em;
+  font-size: 1.5em;
   line-height: 1.2;
   color: $red;
   margin: 1em auto 0;
@@ -30,6 +44,7 @@
 
 main p {
   word-spacing: -2px;
+
   @include mq(narrow) {
     text-align: left;
   }
