--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -6,6 +6,7 @@
         "mixins",
         "content",
         "product",
+        "carousel",
         "footer",
         "purchase",
         "mailchimp";
