Carousel tidy up and more images.

--- a/_includes/carousel.html
+++ b/_includes/carousel.html
@@ -2,7 +2,7 @@
   <div class="slides">
 
       {% for image in page.productimg %}
-      <div id="slide-1">
+      <div id="slide" class="slide">
         <img src="/assets/images/{{ image }}" alt="" />
       </div>
       {% endfor %}
