--- a/_layouts/product.html
+++ b/_layouts/product.html
@@ -8,23 +8,11 @@
       </p>
 
       <section class="content-intro">
+        {% include carousel.html %}
         <div class="content-intro--content">
-          <section class="content-intro--images">
-            {% include carousel.html %}
-          </section>
           {{ content }}
         </div>
-      {% if page.shipping == false and page.tags contains "noshipping" %}
-      {% include purchase_noshipping.html %}
-
-      {% elsif page.shipping == true and page.tags contains "portfolioedition" %}
-        {% include purchase_portfolioedition.html %}
-
-      {% elsif page.shipping == true and page.tags contains "artistsedition" %}
-        {% include purchase_artistsedition.html %}
-
-      {% endif %}
-
+        {% include purchase_logic.html %}
       </section>
     </main>
 
