--- a/_sass/_carousel.scss
+++ b/_sass/_carousel.scss
@@ -1,10 +1,14 @@
+// Carousel – from https://css-tricks.com/css-only-carousel/
 
 .slider {
+  margin: 50px 0;
   text-align: left;
   overflow: hidden;
 }
 
 .slides {
+  background-color: white;
+  border: 15px solid white;
   display: flex;
   overflow-x: auto;
 
@@ -13,15 +17,17 @@
   -webkit-overflow-scrolling: touch;
   // scroll-snap-points-x: repeat(300px);
   // scroll-snap-type: mandatory;
-
 }
 .slides::-webkit-scrollbar {
   width: 10px;
   height: 12px;
+  margin: 15px;
 }
 .slides::-webkit-scrollbar-thumb {
   background: transparentize($bodyColor,0.75);
-  border-radius: 10px;
+  border-radius: 0;
+
+
 }
 .slides::-webkit-scrollbar-track {
   background: transparent;
@@ -29,7 +35,7 @@
 .slides > div {
   scroll-snap-align: center;
   flex-shrink: 0;
-  margin-right: 70px;
+  margin-right: 50px;
   transform-origin: center center;
   transform: scale(1);
   transition: transform 0.5s;
@@ -38,13 +44,18 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  font-size: 100px;
+  // font-size: 100px;
 }
 .slides > div:target {
    transform: scale(0.8);
 }
+.slide img {
+  border: 15px solid white;
+  max-height: 350px;
+  display: inline-block;
+  margin-bottom: 50px;
 
-
+}
 // .slider > a {
 //   display: inline-flex;
 //   width: 1.5rem;
