--- a/_sass/_product.scss
+++ b/_sass/_product.scss
@@ -10,15 +10,8 @@
 }
 .content-intro--content {
   @include cf();
-  .content-intro--images img {
-    max-height: 500px;
-    display: block;
-    margin: 0px auto 50px;
-  }
-  > p, > h3 {
     max-width: 40em;
-    margin: .5em auto .5em;
-  }
+    margin: 0 auto;
   h2 {
     margin: 2em auto 2em;
     text-align: center;
@@ -30,7 +23,7 @@
   text-align: center;
   font-size: 1.5em;
   line-height: 1.2;
-  color: $red;
+  color: $backgroundColor;
   margin: 1em auto 0;
   font-weight: 700;
   max-width: 100%;
