--- a/_sass/_purchase.scss
+++ b/_sass/_purchase.scss
@@ -30,9 +30,10 @@
 }
 
 .purchase {
+  background-color: white;
   text-align: left;
-  margin: 25px auto 0;
-  padding: 25px 0 0;
+  margin: 50px auto 0;
+  padding: 25px;
   @include cf();
   @include mq(narrow) {
     text-align: center;
