--- a/_layouts/product.html
+++ b/_layouts/product.html
@@ -8,6 +8,7 @@
       </p>
 
       <section class="content-intro">
+        <h2>{{ page.subtitle }}</h2>
         {% include carousel.html %}
         <div class="content-intro--content">
           {{ content }}
