--- a/_sass/_purchase.scss
+++ b/_sass/_purchase.scss
@@ -30,7 +30,8 @@
 }
 
 .purchase {
-  background-color: white;
+  // background-color: white;
+  border-top: 1px solid lighten($bodyColor,50%);
   text-align: left;
   margin: 50px auto 0;
   padding: 25px;
