--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -7,8 +7,9 @@
         "content",
         "product",
         "carousel",
-        "footer",
+        "reviews",
         "purchase",
+        "footer",
         "mailchimp";
 
 html, body {
