--- a/_includes/reviews.html
+++ b/_includes/reviews.html
@@ -1,18 +1,25 @@
-<h3><i>Fisherwomen</i> reviews & media</h3>
-
-<ul class="review">
-  <li><a href="https://www.nationalgeographic.co.uk/photography/2021/03/photographing-britains-fisherwomen">
-      Photographing Britain's fisherwomen – the generations of workers who anchored an industry
-    </a> – National Geographic UK
+<section class="reviews">
+  <h2><i>Fisherwomen</i> reviews & media</h2>
+  <ul class="review">
+    <li>
+      <a href="https://www.nationalgeographic.co.uk/photography/2021/03/photographing-britains-fisherwomen">
+        Photographing Britain's fisherwomen – the generations of workers who anchored an industry
+      </a> – National Geographic UK
+    </li>
+    <li>
+      <a href="http://www.documentscotland.com/craig-eastons-fisherwomen/">
+        Document Scotland</a>
+        <i>Fisherwomen</i> 2019 Exhibition launch
+    </li>
+    <li>BBC Radio Orkney – interview with Craig Easton <br />
+      <div class="fb-video" data-href="https://www.facebook.com/craig.easton.121/videos/3321828907860429" data-show-text="false" data-width="">
+        <blockquote cite="https://developers.facebook.com/craig.easton.121/videos/3321828907860429/" class="fb-xfbml-parse-ignore">
+          <a href="https://developers.facebook.com/craig.easton.121/videos/3321828907860429/"></a>
+          <p>I had a wee chat with BBC Radio Orkney this morning about my FISHERWOMEN series... Here it is with a little slide show of pictures made in the islands over the years to give you a sense of place whilst listening - radio with pictures... it could catch on!</p>
+          Posted by <a href="https://www.facebook.com/craig.easton.121">Craig Easton</a> on Thursday, 3 September 2020
+        </blockquote>
+      </div>
   </li>
-  <li>
-    <a href="http://www.documentscotland.com/craig-eastons-fisherwomen/">
-      Document Scotland</a>
-      <i>Fisherwomen</i> 2019 Exhibition launch
-  </li>
-  <li>BBC Radio Orkney – interview with Craig Easton <br />
-    <div class="fb-video" data-href="https://www.facebook.com/craig.easton.121/videos/3321828907860429" data-show-text="false" data-width=""><blockquote cite="https://developers.facebook.com/craig.easton.121/videos/3321828907860429/" class="fb-xfbml-parse-ignore"><a href="https://developers.facebook.com/craig.easton.121/videos/3321828907860429/"></a><p>I had a wee chat with BBC Radio Orkney this morning about my FISHERWOMEN series...
-  Here it is with a little slide show of pictures made in the islands over the years to give you a sense of place whilst listening - radio with pictures... it could catch on!</p>Posted by <a href="https://www.facebook.com/craig.easton.121">Craig Easton</a> on Thursday, 3 September 2020</blockquote></div>
-</li>
-</ul>
-<p>Contact <a href="mailto:hello@tenoclockbooks.com">hello@tenoclockbooks.com</a> for press images and interview enquiries.</p>
+  </ul>
+  <p class="review-contact">Contact <a href="mailto:hello@tenoclockbooks.com">hello@tenoclockbooks.com</a> for press images and interview enquiries.</p>
+</section>
