--- a/_layouts/product.html
+++ b/_layouts/product.html
@@ -2,6 +2,8 @@
   <body class="{{ page.layout }}">
     <main class="content">
       {% include header.html %}
+      <div id="fb-root"></div>
+      <script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_GB/sdk.js#xfbml=1&version=v8.0" nonce="64wUnRhz"></script>
 
       <p class="statement">
         {{ page.title }}
@@ -14,6 +16,9 @@
           {{ content }}
         </div>
         {% include purchase_logic.html %}
+
+        {% include reviews.html %}
+
       </section>
     </main>
 
