--- a/_sass/_reviews.scss
+++ b/_sass/_reviews.scss
@@ -1,6 +1,5 @@
 .reviews {
-  border-top: 1px solid lighten($bodyColor,50%);
-  margin: 25px auto 0;
+  margin: 0 auto 0;
   max-width: 40em;
   padding: 50px;
   h2 {
