Homepage responsive styles for small/medium

--- a/_sass/_content.scss
+++ b/_sass/_content.scss
@@ -2,6 +2,14 @@
 .content {
   min-height: 100%;
   position: relative;
+  @include mq(medium) {
+    // @include show(red);
+  }
+  @include mq(small) {
+    // @include show(green);
+  }
+
+
 }
 h2 {
   font-family: $headerFont;
@@ -53,9 +61,19 @@ a {
   bottom: 0;
   padding: 20px;
   background-color: transparentize($backgroundColor,0.1);
+  @include mq(small) {
+    display: block;
+    font-size: smaller;
+  }
+  @include mq(narrow) {
+  }
   h2 {
     text-align: right;
     padding-right: .5em;
+    @include mq(small) {
+      text-align: center;
+      margin-bottom: .5em;
+    }
   }
   .cta-strip--sticker {
     font-size: 14px;
