--- a/_sass/_purchase.scss
+++ b/_sass/_purchase.scss
@@ -1,15 +1,25 @@
 .purchase--wrap {
   display: flex;
   @include cf();
+  @include mq(small) {
+    justify-content: space-between;
+    margin: 0 auto;
+    text-align: center;
+    max-width: 80%;
+  }
 }
 .purchase-link {
   float: left;
-  // width: 46%;
+  width: 50%;
   background-color: $red;
   margin: 0 2%;
   box-sizing: border-box;
   border-radius: 3px;
   @include transition();
+  @include mq(small) {
+    float: none;
+
+  }
   &:hover {
     transform: scale(1.05);
   }
