Changed to white bg home

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,5 +1,5 @@
 {% include head.html %}
-  <body style="background-image: url(/assets/images/{{ page.bgimg }}.jpg), linear-gradient(180deg, #080708, #171518)">
+  <body style="background-image: url(/assets/images/{{ page.bgimg }}.jpg)">
     <main class="content">
     {% include header.html %}
 
