Logic for artists data and bio on product pages

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,5 +1,5 @@
 {% include head.html %}
-  <body style="background-image: url(/assets/images/{{ page.bgimg }}.jpg)">
+  <body class="{{ page.layout }}">
     <main class="content">
     {% include header.html %}
 
