--- a/_sass/_product.scss
+++ b/_sass/_product.scss
@@ -1,6 +1,5 @@
 // Product pages
 .product {
-  background-image: none, linear-gradient(180deg, #080708, #171518);
 }
 .content-intro {
   margin: 50px auto 0;
@@ -31,7 +30,7 @@
   text-align: center;
   font-size: 1.5em;
   line-height: 1.2;
-  color: $backgroundColor;
+  color: $bodyColor;
   margin: 1em auto 0;
   font-weight: 700;
   max-width: 100%;
