--- a/_sass/_carousel.scss
+++ b/_sass/_carousel.scss
@@ -3,12 +3,18 @@
   margin: 50px 0;
   text-align: left;
   overflow: hidden;
+  @include mq(small) {
+    margin: 20px 0;
+  }
 }
 .slides {
   background-color: white;
   border: 15px solid white;
   display: flex;
   overflow-x: auto;
+  @include mq(small) {
+    border: 5px solid white;
+  }
 }
 .slides::-webkit-scrollbar {
   width: 10px;
@@ -32,5 +38,7 @@
   max-height: 350px;
   display: inline-block;
   margin-bottom: 25px;
-
+  @include mq(small) {
+    border: 5px solid white;
+  }
 }
