--- a/_sass/_content.scss
+++ b/_sass/_content.scss
@@ -21,7 +21,7 @@ h2 {
   @include mq(narrow) {
     padding-top: 25px;
     margin-bottom: 25px;
-    font-size: 2em;
+    font-size: 1.5em;
   }
 }
 h3 {
@@ -34,7 +34,7 @@ h3 {
   @include mq(small) {
     line-height: 1.2;
     font-size: 1.25em;
-    margin: 0 0 .5em;
+    margin: 2em 0 .5em;
   }
 }
 p {
