--- a/_sass/_product.scss
+++ b/_sass/_product.scss
@@ -17,6 +17,29 @@
       margin: 0;
     }
   }
+  blockquote {
+    font-family: $headerFont;
+    margin: 50px 2em 0;
+    font-style: italic;
+    font-size: larger;
+    // line-height: 22px;
+    & p:before {
+      content: "\201c";
+      display: inline-block;
+      margin-left: -.5em;
+      padding-right: .25em;
+    }
+    & p:after {
+      content: "\201d";
+      display: inline-block;
+      margin-right: .5em;
+      padding-left: -.25em;
+    }
+  }
+  blockquote+p {
+    font-family: $headerFont;
+    margin: 25px 2em;
+  }
   a:link, a:visited, a:hover, a:active {
     color: $red;
     text-decoration: none;
