--- a/_sass/_homepage.scss
+++ b/_sass/_homepage.scss
@@ -4,7 +4,7 @@
   background-position: center center, 0 0;
   background-attachment: fixed;
   background-repeat: no-repeat;
-  background-image: url(/assets/images/fw-comp.png);
+  background-image: url(/assets/images/fwcomp.png);
   @include mq(small) {
     background-size: 90%,100%;
   }
